--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "pinia": "^3.0.4",
+    "view-ui-plus": "^1.3.21",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
