--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "pinia": "^3.0.4",
+    "tailwindcss": "^4.1.18",
     "view-ui-plus": "^1.3.21",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
