--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^2.0.3",
     "pinia": "^3.0.4",
+    "primevue": "^4.5.4",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
